// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntegrationNavbarContainer should display correctly the name of Facebook integration 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(IntegrationNavbarContainer)
    params={
      Object {
        "extra": "overview",
        "integrationId": "78945",
        "integrationType": "facebook",
      }
    }
  >
    <IntegrationNavbarContainer
      currentIntegration={
        Immutable.Map {
          id: 78945,
          name: "foo",
          facebook: Immutable.Map {
            name: "bar",
          },
        }
      }
      dispatch={[Function]}
      params={
        Object {
          "extra": "overview",
          "integrationId": "78945",
          "integrationType": "facebook",
        }
      }
    >
      <Connect(Navbar)
        activeContent="integrations"
      >
        <Navbar
          activeContent="integrations"
          availableForChat={true}
          closePanels={[Function]}
          currentUser={
            Immutable.Map {
            }
          }
          currentUserPreferences={
            Immutable.Map {
              type: "preferences",
              data: Immutable.Map {
                show_macros: false,
                available_for_chat: true,
              },
            }
          }
          isOpenedPanel={false}
          submitSetting={[Function]}
        >
          <div
            className="nav-primary navbar-panel hidden-panel"
          >
            <UncontrolledDropdown
              className="nav-dropdown"
            >
              <Dropdown
                addonType={false}
                className="nav-dropdown"
                dropup={false}
                inNavbar={false}
                isOpen={false}
                nav={false}
                toggle={[Function]}
              >
                <Manager
                  className="nav-dropdown dropdown"
                  onKeyDown={[Function]}
                  tag="div"
                >
                  <div
                    className="nav-dropdown dropdown"
                    onKeyDown={[Function]}
                  >
                    <DropdownToggle
                      aria-haspopup={true}
                      color="transparent"
                    >
                      <Target
                        aria-expanded={false}
                        aria-haspopup={true}
                        className=""
                        color="transparent"
                        component={[Function]}
                        onClick={[Function]}
                      >
                        <Button
                          aria-expanded={false}
                          aria-haspopup={true}
                          className=""
                          color="transparent"
                          innerRef={[Function]}
                          onClick={[Function]}
                          tag="button"
                        >
                          <button
                            aria-expanded={false}
                            aria-haspopup={true}
                            className="btn btn-transparent"
                            onClick={[Function]}
                            type="button"
                          >
                            <div>
                              Integrations
                              <i
                                className="material-icons md-2"
                              >
                                more_vert
                              </i>
                            </div>
                          </button>
                        </Button>
                      </Target>
                    </DropdownToggle>
                    <DropdownMenu
                      flip={true}
                      tag="div"
                    >
                      <div
                        aria-hidden={true}
                        className="dropdown-menu"
                        role="menu"
                        tabIndex="-1"
                      >
                        <DropdownItem
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/tickets"
                          toggle={true}
                        >
                          <NavLink
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/tickets"
                          >
                            <Link
                              className="dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/tickets"
                            >
                              <a
                                className="dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                Tickets
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                        <DropdownItem
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/users"
                          toggle={true}
                        >
                          <NavLink
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/users"
                          >
                            <Link
                              className="dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/users"
                            >
                              <a
                                className="dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                Users
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                        <DropdownItem
                          className="d-none d-md-block"
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/stats"
                          toggle={true}
                        >
                          <NavLink
                            className="d-none d-md-block dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/stats"
                          >
                            <Link
                              className="d-none d-md-block dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/stats"
                            >
                              <a
                                className="d-none d-md-block dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                Statistics
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                        <DropdownItem
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/settings"
                          toggle={true}
                        >
                          <NavLink
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/settings"
                          >
                            <Link
                              className="dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/settings"
                            >
                              <a
                                className="dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                Settings
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                      </div>
                    </DropdownMenu>
                  </div>
                </Manager>
              </Dropdown>
            </UncontrolledDropdown>
            <div
              className="navbar-content"
            >
              <div>
                <div
                  className="item"
                >
                  <h4>
                    bar
                  </h4>
                  <div
                    className="menu"
                  >
                    <Link
                      className="item active"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      title="Overview"
                      to="/app/settings/integrations/facebook/78945/overview"
                    >
                      <a
                        className="item active"
                        onClick={[Function]}
                        style={Object {}}
                        title="Overview"
                      >
                        Overview
                      </a>
                    </Link>
                    <Link
                      className="item"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      title="Customer chat"
                      to="/app/settings/integrations/facebook/78945/customer_chat"
                    >
                      <a
                        className="item"
                        onClick={[Function]}
                        style={Object {}}
                        title="Customer chat"
                      >
                        Customer chat
                      </a>
                    </Link>
                    <Link
                      className="item"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      title="Preferences"
                      to="/app/settings/integrations/facebook/78945/preferences"
                    >
                      <a
                        className="item"
                        onClick={[Function]}
                        style={Object {}}
                        title="Preferences"
                      >
                        Preferences
                      </a>
                    </Link>
                  </div>
                </div>
              </div>
            </div>
            <UncontrolledDropdown
              className="nav-dropdown dropup"
            >
              <Dropdown
                addonType={false}
                className="nav-dropdown dropup"
                dropup={false}
                inNavbar={false}
                isOpen={false}
                nav={false}
                toggle={[Function]}
              >
                <Manager
                  className="nav-dropdown dropup dropdown"
                  onKeyDown={[Function]}
                  tag="div"
                >
                  <div
                    className="nav-dropdown dropup dropdown"
                    onKeyDown={[Function]}
                  >
                    <DropdownToggle
                      aria-haspopup={true}
                      color="transparent"
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <Target
                        aria-expanded={false}
                        aria-haspopup={true}
                        className=""
                        color="transparent"
                        component={[Function]}
                        onClick={[Function]}
                        style={
                          Object {
                            "overflow": "hidden",
                          }
                        }
                      >
                        <Button
                          aria-expanded={false}
                          aria-haspopup={true}
                          className=""
                          color="transparent"
                          innerRef={[Function]}
                          onClick={[Function]}
                          style={
                            Object {
                              "overflow": "hidden",
                            }
                          }
                          tag="button"
                        >
                          <button
                            aria-expanded={false}
                            aria-haspopup={true}
                            className="btn btn-transparent"
                            onClick={[Function]}
                            style={
                              Object {
                                "overflow": "hidden",
                              }
                            }
                            type="button"
                          >
                            <div>
                              <span>
                                <Avatar
                                  badgeColor="#24d69d"
                                  email=""
                                  google={false}
                                  name=""
                                  size={36}
                                  style={
                                    Object {
                                      "bottom": "12px",
                                      "position": "absolute",
                                      "right": "18px",
                                    }
                                  }
                                  url=""
                                >
                                  <div
                                    className="component"
                                    style={
                                      Object {
                                        "bottom": "12px",
                                        "height": "36px",
                                        "position": "absolute",
                                        "right": "18px",
                                        "width": "36px",
                                      }
                                    }
                                  >
                                    <div
                                      className="initials"
                                      style={
                                        Object {
                                          "fontSize": "15px",
                                        }
                                      }
                                    >
                                      <span />
                                    </div>
                                    <div
                                      className="badge"
                                      style={
                                        Object {
                                          "backgroundColor": "#24d69d",
                                        }
                                      }
                                    />
                                  </div>
                                </Avatar>
                              </span>
                            </div>
                          </button>
                        </Button>
                      </Target>
                    </DropdownToggle>
                    <DropdownMenu
                      flip={true}
                      tag="div"
                    >
                      <div
                        aria-hidden={true}
                        className="dropdown-menu"
                        role="menu"
                        tabIndex="-1"
                      >
                        <DropdownItem
                          className="mt-2"
                          tag="a"
                          toggle={false}
                        >
                          <a
                            className="mt-2 dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                          >
                            <div
                              className="d-flex justify-content-between align-items-center"
                            >
                              <div>
                                Available for chat
                              </div>
                              <div>
                                <ToggleButton
                                  onChange={[Function]}
                                  value={true}
                                >
                                  <label
                                    className="switch"
                                    onClick={[Function]}
                                  >
                                    <input
                                      checked={true}
                                      readOnly={true}
                                      type="checkbox"
                                    />
                                    <div
                                      className="slider"
                                    />
                                  </label>
                                </ToggleButton>
                              </div>
                            </div>
                          </a>
                        </DropdownItem>
                        <DropdownItem
                          divider={true}
                          tag="button"
                          toggle={true}
                        >
                          <div
                            className="dropdown-divider"
                            onClick={[Function]}
                            tabIndex="-1"
                          />
                        </DropdownItem>
                        <DropdownItem
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/settings/profile"
                          toggle={true}
                        >
                          <NavLink
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/settings/profile"
                          >
                            <Link
                              className="dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/settings/profile"
                            >
                              <a
                                className="dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                <i
                                  className="material-icons mr-2"
                                >
                                  person
                                </i>
                                Your profile
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                        <DropdownItem
                          href="http://docs.gorgias.io/"
                          tag="a"
                          target="_blank"
                          toggle={true}
                        >
                          <a
                            className="dropdown-item"
                            href="http://docs.gorgias.io/"
                            onClick={[Function]}
                            tabIndex="0"
                            target="_blank"
                          >
                            <i
                              className="material-icons mr-2"
                            >
                              help
                            </i>
                            Documentation
                          </a>
                        </DropdownItem>
                        <DropdownItem
                          onClick={[Function]}
                          tag="a"
                          toggle={true}
                        >
                          <a
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                          >
                            <i
                              className="material-icons mr-2"
                            >
                              keyboard
                            </i>
                            Keyboard shortcuts
                          </a>
                        </DropdownItem>
                        <DropdownItem
                          href="/logout"
                          tag="a"
                          toggle={true}
                        >
                          <a
                            className="dropdown-item"
                            href="/logout"
                            onClick={[Function]}
                            tabIndex="0"
                          >
                            <i
                              className="material-icons mr-2"
                            >
                              exit_to_app
                            </i>
                            Log out
                          </a>
                        </DropdownItem>
                      </div>
                    </DropdownMenu>
                  </div>
                </Manager>
              </Dropdown>
            </UncontrolledDropdown>
          </div>
        </Navbar>
      </Connect(Navbar)>
    </IntegrationNavbarContainer>
  </Connect(IntegrationNavbarContainer)>
</Provider>
`;

exports[`IntegrationNavbarContainer should display correctly the name of Smooch Inside integration 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(IntegrationNavbarContainer)
    params={
      Object {
        "extra": "appearance",
        "integrationId": "78945",
        "integrationType": "smooch_inside",
      }
    }
  >
    <IntegrationNavbarContainer
      currentIntegration={
        Immutable.Map {
          id: 78945,
          name: "foo",
        }
      }
      dispatch={[Function]}
      params={
        Object {
          "extra": "appearance",
          "integrationId": "78945",
          "integrationType": "smooch_inside",
        }
      }
    >
      <Connect(Navbar)
        activeContent="integrations"
      >
        <Navbar
          activeContent="integrations"
          availableForChat={true}
          closePanels={[Function]}
          currentUser={
            Immutable.Map {
            }
          }
          currentUserPreferences={
            Immutable.Map {
              type: "preferences",
              data: Immutable.Map {
                show_macros: false,
                available_for_chat: true,
              },
            }
          }
          isOpenedPanel={false}
          submitSetting={[Function]}
        >
          <div
            className="nav-primary navbar-panel hidden-panel"
          >
            <UncontrolledDropdown
              className="nav-dropdown"
            >
              <Dropdown
                addonType={false}
                className="nav-dropdown"
                dropup={false}
                inNavbar={false}
                isOpen={false}
                nav={false}
                toggle={[Function]}
              >
                <Manager
                  className="nav-dropdown dropdown"
                  onKeyDown={[Function]}
                  tag="div"
                >
                  <div
                    className="nav-dropdown dropdown"
                    onKeyDown={[Function]}
                  >
                    <DropdownToggle
                      aria-haspopup={true}
                      color="transparent"
                    >
                      <Target
                        aria-expanded={false}
                        aria-haspopup={true}
                        className=""
                        color="transparent"
                        component={[Function]}
                        onClick={[Function]}
                      >
                        <Button
                          aria-expanded={false}
                          aria-haspopup={true}
                          className=""
                          color="transparent"
                          innerRef={[Function]}
                          onClick={[Function]}
                          tag="button"
                        >
                          <button
                            aria-expanded={false}
                            aria-haspopup={true}
                            className="btn btn-transparent"
                            onClick={[Function]}
                            type="button"
                          >
                            <div>
                              Integrations
                              <i
                                className="material-icons md-2"
                              >
                                more_vert
                              </i>
                            </div>
                          </button>
                        </Button>
                      </Target>
                    </DropdownToggle>
                    <DropdownMenu
                      flip={true}
                      tag="div"
                    >
                      <div
                        aria-hidden={true}
                        className="dropdown-menu"
                        role="menu"
                        tabIndex="-1"
                      >
                        <DropdownItem
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/tickets"
                          toggle={true}
                        >
                          <NavLink
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/tickets"
                          >
                            <Link
                              className="dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/tickets"
                            >
                              <a
                                className="dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                Tickets
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                        <DropdownItem
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/users"
                          toggle={true}
                        >
                          <NavLink
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/users"
                          >
                            <Link
                              className="dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/users"
                            >
                              <a
                                className="dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                Users
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                        <DropdownItem
                          className="d-none d-md-block"
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/stats"
                          toggle={true}
                        >
                          <NavLink
                            className="d-none d-md-block dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/stats"
                          >
                            <Link
                              className="d-none d-md-block dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/stats"
                            >
                              <a
                                className="d-none d-md-block dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                Statistics
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                        <DropdownItem
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/settings"
                          toggle={true}
                        >
                          <NavLink
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/settings"
                          >
                            <Link
                              className="dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/settings"
                            >
                              <a
                                className="dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                Settings
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                      </div>
                    </DropdownMenu>
                  </div>
                </Manager>
              </Dropdown>
            </UncontrolledDropdown>
            <div
              className="navbar-content"
            >
              <div>
                <div
                  className="item"
                >
                  <h4>
                    foo
                  </h4>
                  <div
                    className="menu"
                  >
                    <Link
                      className="item active"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      title="Appearance"
                      to="/app/settings/integrations/smooch_inside/78945/appearance"
                    >
                      <a
                        className="item active"
                        onClick={[Function]}
                        style={Object {}}
                        title="Appearance"
                      >
                        Appearance
                      </a>
                    </Link>
                    <Link
                      className="item"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      title="Installation"
                      to="/app/settings/integrations/smooch_inside/78945/installation"
                    >
                      <a
                        className="item"
                        onClick={[Function]}
                        style={Object {}}
                        title="Installation"
                      >
                        Installation
                      </a>
                    </Link>
                    <Link
                      className="item"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      title="Preferences"
                      to="/app/settings/integrations/smooch_inside/78945/preferences"
                    >
                      <a
                        className="item"
                        onClick={[Function]}
                        style={Object {}}
                        title="Preferences"
                      >
                        Preferences
                      </a>
                    </Link>
                    <Link
                      className="item"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      title="Campaigns"
                      to="/app/settings/integrations/smooch_inside/78945/campaigns"
                    >
                      <a
                        className="item"
                        onClick={[Function]}
                        style={Object {}}
                        title="Campaigns"
                      >
                        Campaigns
                      </a>
                    </Link>
                  </div>
                </div>
              </div>
            </div>
            <UncontrolledDropdown
              className="nav-dropdown dropup"
            >
              <Dropdown
                addonType={false}
                className="nav-dropdown dropup"
                dropup={false}
                inNavbar={false}
                isOpen={false}
                nav={false}
                toggle={[Function]}
              >
                <Manager
                  className="nav-dropdown dropup dropdown"
                  onKeyDown={[Function]}
                  tag="div"
                >
                  <div
                    className="nav-dropdown dropup dropdown"
                    onKeyDown={[Function]}
                  >
                    <DropdownToggle
                      aria-haspopup={true}
                      color="transparent"
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <Target
                        aria-expanded={false}
                        aria-haspopup={true}
                        className=""
                        color="transparent"
                        component={[Function]}
                        onClick={[Function]}
                        style={
                          Object {
                            "overflow": "hidden",
                          }
                        }
                      >
                        <Button
                          aria-expanded={false}
                          aria-haspopup={true}
                          className=""
                          color="transparent"
                          innerRef={[Function]}
                          onClick={[Function]}
                          style={
                            Object {
                              "overflow": "hidden",
                            }
                          }
                          tag="button"
                        >
                          <button
                            aria-expanded={false}
                            aria-haspopup={true}
                            className="btn btn-transparent"
                            onClick={[Function]}
                            style={
                              Object {
                                "overflow": "hidden",
                              }
                            }
                            type="button"
                          >
                            <div>
                              <span>
                                <Avatar
                                  badgeColor="#24d69d"
                                  email=""
                                  google={false}
                                  name=""
                                  size={36}
                                  style={
                                    Object {
                                      "bottom": "12px",
                                      "position": "absolute",
                                      "right": "18px",
                                    }
                                  }
                                  url=""
                                >
                                  <div
                                    className="component"
                                    style={
                                      Object {
                                        "bottom": "12px",
                                        "height": "36px",
                                        "position": "absolute",
                                        "right": "18px",
                                        "width": "36px",
                                      }
                                    }
                                  >
                                    <div
                                      className="initials"
                                      style={
                                        Object {
                                          "fontSize": "15px",
                                        }
                                      }
                                    >
                                      <span />
                                    </div>
                                    <div
                                      className="badge"
                                      style={
                                        Object {
                                          "backgroundColor": "#24d69d",
                                        }
                                      }
                                    />
                                  </div>
                                </Avatar>
                              </span>
                            </div>
                          </button>
                        </Button>
                      </Target>
                    </DropdownToggle>
                    <DropdownMenu
                      flip={true}
                      tag="div"
                    >
                      <div
                        aria-hidden={true}
                        className="dropdown-menu"
                        role="menu"
                        tabIndex="-1"
                      >
                        <DropdownItem
                          className="mt-2"
                          tag="a"
                          toggle={false}
                        >
                          <a
                            className="mt-2 dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                          >
                            <div
                              className="d-flex justify-content-between align-items-center"
                            >
                              <div>
                                Available for chat
                              </div>
                              <div>
                                <ToggleButton
                                  onChange={[Function]}
                                  value={true}
                                >
                                  <label
                                    className="switch"
                                    onClick={[Function]}
                                  >
                                    <input
                                      checked={true}
                                      readOnly={true}
                                      type="checkbox"
                                    />
                                    <div
                                      className="slider"
                                    />
                                  </label>
                                </ToggleButton>
                              </div>
                            </div>
                          </a>
                        </DropdownItem>
                        <DropdownItem
                          divider={true}
                          tag="button"
                          toggle={true}
                        >
                          <div
                            className="dropdown-divider"
                            onClick={[Function]}
                            tabIndex="-1"
                          />
                        </DropdownItem>
                        <DropdownItem
                          onClick={[Function]}
                          tag={[Function]}
                          to="/app/settings/profile"
                          toggle={true}
                        >
                          <NavLink
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                            to="/app/settings/profile"
                          >
                            <Link
                              className="dropdown-item dropdown-item"
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              style={Object {}}
                              tabIndex="0"
                              to="/app/settings/profile"
                            >
                              <a
                                className="dropdown-item dropdown-item"
                                onClick={[Function]}
                                style={Object {}}
                                tabIndex="0"
                              >
                                <i
                                  className="material-icons mr-2"
                                >
                                  person
                                </i>
                                Your profile
                              </a>
                            </Link>
                          </NavLink>
                        </DropdownItem>
                        <DropdownItem
                          href="http://docs.gorgias.io/"
                          tag="a"
                          target="_blank"
                          toggle={true}
                        >
                          <a
                            className="dropdown-item"
                            href="http://docs.gorgias.io/"
                            onClick={[Function]}
                            tabIndex="0"
                            target="_blank"
                          >
                            <i
                              className="material-icons mr-2"
                            >
                              help
                            </i>
                            Documentation
                          </a>
                        </DropdownItem>
                        <DropdownItem
                          onClick={[Function]}
                          tag="a"
                          toggle={true}
                        >
                          <a
                            className="dropdown-item"
                            onClick={[Function]}
                            tabIndex="0"
                          >
                            <i
                              className="material-icons mr-2"
                            >
                              keyboard
                            </i>
                            Keyboard shortcuts
                          </a>
                        </DropdownItem>
                        <DropdownItem
                          href="/logout"
                          tag="a"
                          toggle={true}
                        >
                          <a
                            className="dropdown-item"
                            href="/logout"
                            onClick={[Function]}
                            tabIndex="0"
                          >
                            <i
                              className="material-icons mr-2"
                            >
                              exit_to_app
                            </i>
                            Log out
                          </a>
                        </DropdownItem>
                      </div>
                    </DropdownMenu>
                  </div>
                </Manager>
              </Dropdown>
            </UncontrolledDropdown>
          </div>
        </Navbar>
      </Connect(Navbar)>
    </IntegrationNavbarContainer>
  </Connect(IntegrationNavbarContainer)>
</Provider>
`;
